--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.sofm</groupId>
   <artifactId>sofm-java-common-util</artifactId>
-  <version>1.0-RELEASE</version>
+  <version>1.1-RELEASE</version>
   <packaging>jar</packaging>
 
   <name>sofm-java-common-util</name>
@@ -100,6 +100,12 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.3</version>
     </dependency>
   </dependencies>
 
